src/objects/OBUL_Producer_Organisation__c.object
<CustomObject>
    <fields>
        <fullName>CKW__c</fullName>
        <label>CKW</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>OBUL Producer Organisations</relationshipLabel>
        <relationshipName>OBUL_Producer_Organisations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DC__c</fullName>
        <description>Depot Committee</description>
        <inlineHelpText>Depot Committee</inlineHelpText>
        <label>DC</label>
        <referenceTo>OBUL_Depot_Committee__c</referenceTo>
        <relationshipLabel>OBUL Producer Organisations</relationshipLabel>
        <relationshipName>OBUL_Producer_Organisations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>OBUL Producer Organisation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>DC__c</columns>
        <columns>CKW__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OBUL Producer Organisations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>